--- a/src/USSEScoreboard/Views/Highlights/Edit.cshtml
+++ b/src/USSEScoreboard/Views/Highlights/Edit.cshtml
@@ -4,6 +4,8 @@
     ViewData["Title"] = "Edit";
 }
 
+<link href="~/lib/summernote/dist/summernote.css" rel="stylesheet">
+
 <h2>Edit</h2>
 
 <form asp-action="Edit">
@@ -13,7 +15,6 @@
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <input type="hidden" asp-for="HighlightId" />
         <input type="hidden" asp-for="DateCreated" />
-        <input type="hidden" asp-for="UserProfileId" />
         <div class="form-group">
             <label asp-for="DateStart" class="col-md-2 control-label"></label>
             <div class="col-md-10">
@@ -26,6 +27,13 @@
             <div class="col-md-10">
                 <input asp-for="DateEnd" type="date" class="form-control" />
                 <span asp-validation-for="DateEnd" class="text-danger" />
+            </div>
+        </div>
+        <div class="form-group">
+            <label asp-for="UserProfileId" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <select asp-for="UserProfileId" class="form-control" asp-items="ViewBag.UserProfileId"></select>
+                <span asp-validation-for="UserProfileId" class="text-danger" />
             </div>
         </div>
         <div class="form-group">
@@ -49,4 +57,13 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
+    <script src="~/lib/summernote/dist/summernote.min.js"></script>
+    <script>
+                $(document).ready(function() {
+                    $('#Body').summernote({
+                        height: 300
+                    });
+                });
+    </script>
 }
