--- a/src/USSEScoreboard/Views/Highlights/Delete.cshtml
+++ b/src/USSEScoreboard/Views/Highlights/Delete.cshtml
@@ -8,40 +8,16 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Highlight</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Body)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Body)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.DateCreated)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.DateCreated)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.DateEnd)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.DateEnd)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.DateModified)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.DateModified)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.DateStart)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.DateStart)
-        </dd>
-    </dl>
+
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+            Highlights for @Model.UserProfile.FullName @Model.DateStart.ToString("D") -> @Model.DateEnd.ToString("D")
+        </div>
+        <div class="panel-body">
+            @Html.Raw(Model.Body)
+        </div>
+    </div>
+
     
     <form asp-action="Delete">
         <div class="form-actions no-color">
