--- a/src/USSEScoreboard/Views/Highlights/Create.cshtml
+++ b/src/USSEScoreboard/Views/Highlights/Create.cshtml
@@ -14,14 +14,14 @@
         <hr />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group">
-            <label asp-for="DateStart" class="col-md-2 control-label"></label>
+            <label class="col-md-2 control-label">Start Date</label>
             <div class="col-md-10">
                 <input asp-for="DateStart" type="date" class="form-control" />
                 <span asp-validation-for="DateStart" class="text-danger" />
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="DateEnd" class="col-md-2 control-label"></label>
+            <label class="col-md-2 control-label">End Date</label>
             <div class="col-md-10">
                 <input asp-for="DateEnd" type="date" class="form-control" />
                 <span asp-validation-for="DateEnd" class="text-danger" />
