--- a/src/USSEScoreboard/Views/Highlights/Edit.cshtml
+++ b/src/USSEScoreboard/Views/Highlights/Edit.cshtml
@@ -16,14 +16,14 @@
         <input type="hidden" asp-for="HighlightId" />
         <input type="hidden" asp-for="DateCreated" />
         <div class="form-group">
-            <label asp-for="DateStart" class="col-md-2 control-label"></label>
+            <label class="col-md-2 control-label">Start Date</label>
             <div class="col-md-10">
                 <input asp-for="DateStart" type="date" class="form-control" />
                 <span asp-validation-for="DateStart" class="text-danger" />
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="DateEnd" class="col-md-2 control-label"></label>
+            <label class="col-md-2 control-label">End Date</label>
             <div class="col-md-10">
                 <input asp-for="DateEnd" type="date" class="form-control" />
                 <span asp-validation-for="DateEnd" class="text-danger" />
