--- a/src/USSEScoreboard/Views/Shared/_Layout.cshtml
+++ b/src/USSEScoreboard/Views/Shared/_Layout.cshtml
@@ -19,60 +19,65 @@
     </environment>
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top header-shadow ">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>                
-                <img src="~/images/master-yoda-white.png" style="width: 110px; float: left;" title="Master Yoda" />
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Southeast</a>                
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Commitments" asp-action="My">Commitments</a></li>                    
-                    <li><a asp-area="" asp-controller="Highlights" asp-action="Index">Highlights</a></li>
-                    @if (User.Identity.IsAuthenticated && User.Identity.Name.Contains("Tommy"))
-                    {
-                    <li><a asp-area="" asp-controller="Wigs" asp-action="Index">WIGS</a></li>
-                    <li><a asp-area="" asp-controller="LeadMeasures" asp-action="Index">Lead Measures</a></li>
-                    <li><a asp-area="" asp-controller="GlobalScoreEntries" asp-action="Index">Tracking</a></li> 
-                    }                   
-                </ul>
-                @await Html.PartialAsync("_LoginPartial")
+    <environment names="Development">
+        <div style="background-color: darkred; color: #fff; font-weight: bold; text-align: center; font-size: 12px; padding: 5px;">
+            *** DEVELOPMENT ***
+        </div>
+    </environment>
+        <div class="navbar navbar-inverse navbar-fixed-top header-shadow ">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <img src="~/images/master-yoda-white.png" style="width: 110px; float: left;" title="Master Yoda" />
+                    <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Southeast</a>
+                </div>
+                <div class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+                        <li><a asp-area="" asp-controller="Commitments" asp-action="My">Commitments</a></li>
+                        <li><a asp-area="" asp-controller="Highlights" asp-action="Index">Highlights</a></li>
+                        @if (User.Identity.IsAuthenticated && User.Identity.Name.Contains("Tommy"))
+                        {
+                            <li><a asp-area="" asp-controller="Wigs" asp-action="Index">WIGS</a></li>
+                            <li><a asp-area="" asp-controller="LeadMeasures" asp-action="Index">Lead Measures</a></li>
+                            <li><a asp-area="" asp-controller="GlobalScoreEntries" asp-action="Index">Tracking</a></li>
+                        }
+                    </ul>
+                    @await Html.PartialAsync("_LoginPartial")
+                </div>
             </div>
         </div>
-    </div>
-    <div style="height: 30px;"></div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; 2016 - USSEScoreboard</p>
-        </footer>
-    </div>
+        <div style="height: 30px;"></div>
+        <div class="container body-content">
+            @RenderBody()
+            <hr />
+            <footer>
+                <p>&copy; 2016 - USSEScoreboard</p>
+            </footer>
+        </div>
 
-    <environment names="Development">
-        <script src="~/lib/jquery/dist/jquery.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
-        <script src="~/js/site.js" asp-append-version="true"></script>
-    </environment>
-    <environment names="Staging,Production">
-        <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
-                asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
-                asp-fallback-test="window.jQuery">
-        </script>
-        <script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.6/bootstrap.min.js"
-                asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
-                asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal">
-        </script>
-        <script src="~/js/site.min.js" asp-append-version="true"></script>
-    </environment>
+        <environment names="Development">
+            <script src="~/lib/jquery/dist/jquery.js"></script>
+            <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+            <script src="~/js/site.js" asp-append-version="true"></script>
+        </environment>
+        <environment names="Staging,Production">
+            <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
+                    asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
+                    asp-fallback-test="window.jQuery">
+            </script>
+            <script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.6/bootstrap.min.js"
+                    asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
+                    asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal">
+            </script>
+            <script src="~/js/site.min.js" asp-append-version="true"></script>
+        </environment>
 
-    @RenderSection("scripts", required: false)
+        @RenderSection("scripts", required: false)
 </body>
 </html>
