--- a/src/USSEScoreboard/Views/Commitments/SearchByUser.cshtml
+++ b/src/USSEScoreboard/Views/Commitments/SearchByUser.cshtml
@@ -6,11 +6,7 @@
 
 <h2>Commitments : @Model.SearchUserName</h2>
 
-@*<p>
-    <a asp-action="Create">Create New</a>
-</p>*@
-
-<table class="table table-striped">
+<table class="table table-striped commitTable">
     <thead>
         <tr>
             <th>Date Created</th>
@@ -23,7 +19,7 @@
     <tbody>
         @foreach (var item in Model.Commitments)
         {
-            <tr>
+            <tr class="@(item.Status == CommitmentStatus.Archive ? "archived" : "")">
                 <td>@item.DateCreated.ToString("d")</td>
                 <td>@item.Title</td>
                 <td>@item.UserProfile.FullName</td>
