Additional Column & Toggle for A+ Notes

--- a/src/USSEScoreboard/Views/Commitments/My.cshtml
+++ b/src/USSEScoreboard/Views/Commitments/My.cshtml
@@ -11,6 +11,7 @@
     <a class="btn btn-sm @(Model.IsExpenses ? "btn-success" : "btn-warning")" asp-action="ToggleExpenses">Toggle Expenses</a>
     <a class="btn btn-sm @(Model.IsCRM ? "btn-success" : "btn-warning")" asp-action="ToggleCRM">Toggle CRM</a>
     <a class="btn btn-sm @(Model.IsFRI ? "btn-success" : "btn-warning")" asp-action="ToggleFRI">Toggle FRI</a>
+    <a class="btn btn-sm @(Model.IsAscendNotes ? "btn-success" : "btn-warning")" asp-action="ToggleAscendNotes">Toggle Ascend Notes</a>
 </div>
 
     <table class="table table-striped">
