--- a/src/USSEScoreboard/Views/Home/Index.cshtml
+++ b/src/USSEScoreboard/Views/Home/Index.cshtml
@@ -19,7 +19,7 @@
                         <tr>
                             <th style="border-top: 1px solid #fff !important; border-left: 1px solid #fff !important;">&nbsp;</th>
                             <th class="text-center">Weekly Tasks <a href="/Commitments/My"><i class="fa fa-external-link" aria-hidden="true"></i></a></th>
-                            <th class="text-center">CRM <a href="https://microsoftcorp9.crm.dynamics.com/main.aspx" title="Launch CRM in new window" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a></th>
+                            <th class="text-center">CRM <a href="https://usdxevangelism.crm.dynamics.com/main.aspx" title="Launch CRM in new window" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a></th>
                             <th class="text-center">Expenses <a href="http://msexpense2" title="Launch Expenses in new window" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a></th>
                             <th class="text-center">FRI <a href="http://aka.ms/roleguide" title="Launch Role Guide in new window" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a></th>
                             <th class="text-center">A+ <a href="http://aka.ms/ascendplus" title="Ascend+ Notes and Updates" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a></th>
