--- a/src/USSEScoreboard/Views/Home/Index.cshtml
+++ b/src/USSEScoreboard/Views/Home/Index.cshtml
@@ -97,27 +97,29 @@
             <!-- start trending table -->
             <div class="panel panel-info">
                 <div class="panel-heading">
-                   <strong>Trending towards... [Inactive]</strong>
+                   <strong>Lead Measure Trend To Date</strong>
                 </div>
                 <div class="panel-body">
+                    <label>Community Wins</label>
                     <div class="progress">
-                        <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%">
-                            Presentation
+                        <div class="progress-bar progress-bar-striped @ViewBag.CommunityProgressClass" role="progressbar" aria-valuenow="@ViewBag.CommunityProgress" aria-valuemin="0" aria-valuemax="100" style="width: @ViewBag.CommunityProgress%">
+                            Trending &#64; @ViewBag.CommunityProgress%
                         </div>
                     </div>
                     <div class="progress">
-                        <div class="progress-bar progress-bar-info progress-bar-striped" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
-                            Ascend
+                        <div class="progress-bar progress-bar-striped @ViewBag.CommunityOverallClass" role="progressbar" aria-valuenow="@ViewBag.CommunityOverall" aria-valuemin="0" aria-valuemax="100" style="width: @ViewBag.CommunityOverall%">
+                            Overall &#64; @ViewBag.CommunityOverall%
+                        </div>
+                    </div>
+                    <label>Ascend Wins</label>
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-striped @ViewBag.AscendProgressClass" role="progressbar" aria-valuenow="@ViewBag.AscendProgress" aria-valuemin="0" aria-valuemax="100" style="width: @ViewBag.AscendProgress%">
+                            Trending &#64; @ViewBag.AscendProgress%
                         </div>
                     </div>
                     <div class="progress">
-                        <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-                            <span class="sr-only">60% Complete (warning)</span>
-                        </div>
-                    </div>
-                    <div class="progress">
-                        <div class="progress-bar progress-bar-danger progress-bar-striped" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-                            <span class="sr-only">80% Complete (danger)</span>
+                        <div class="progress-bar progress-bar-striped @ViewBag.AscendOverallClass" role="progressbar" aria-valuenow="@ViewBag.AscendOverall" aria-valuemin="0" aria-valuemax="100" style="width: @ViewBag.AscendOverall%">
+                            Overall &#64; @ViewBag.AscendOverall%
                         </div>
                     </div>
                 </div>
