--- a/src/USSEScoreboard/Views/Shared/_LoginPartial.cshtml
+++ b/src/USSEScoreboard/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,8 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using USSEScoreboard.Models
+@using USSEScoreboard.Interfaces
 
+@inject IUserProfileRepository UserProfileRepository
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
@@ -9,7 +11,7 @@
     <form asp-area="" asp-controller="Account" asp-action="LogOff" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
             <li>
-                <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+                <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Hello @UserProfileRepository.GetUserProfileByUserIdAsync(UserManager.GetUserId(User)).FirstName!</a>
             </li>
             <li>
                 <button type="submit" class="btn btn-link navbar-btn navbar-link">Log off</button>
