--- a/Website/USSEScoreboard/Views/Shared/_LoginPartial.cshtml
+++ b/Website/USSEScoreboard/Views/Shared/_LoginPartial.cshtml
@@ -3,15 +3,16 @@
 @using USSEScoreboard.Interfaces
 
 @inject IUserProfileRepository UserProfileRepository
-@inject SignInManager<ApplicationUser> SignInManager
-@inject UserManager<ApplicationUser> UserManager
+@*@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager*@
 
-@if (SignInManager.IsSignedIn(User))
+@if (User.Identity.IsAuthenticated)
 {
     <form asp-area="" asp-controller="Account" asp-action="LogOff" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
             <li>
-                <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Hello @UserProfileRepository.GetUserProfileFirstName(UserManager.GetUserId(User))!</a>
+                <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Hello @User.Identity.Name !</a>
+               
             </li>
             <li>
                 <button type="submit" class="btn btn-link navbar-btn navbar-link">Log off</button>
@@ -22,7 +23,6 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        @*<li><a asp-area="" asp-controller="Account" asp-action="Register">Register</a></li>*@
         <li><a asp-area="" asp-controller="Account" asp-action="Login">Log in</a></li>
     </ul>
 }
