--- a/Website/USSEScoreboard/Views/Home/Index.cshtml
+++ b/Website/USSEScoreboard/Views/Home/Index.cshtml
@@ -6,6 +6,16 @@
 
 @if (User.Identity.IsAuthenticated)
 {
+    <table class="table">
+        @foreach (var claim in User.Claims)
+        {
+            <tr>
+                <td>@claim.Type</td>
+                <td>@claim.Value</td>
+            </tr>
+
+        }
+    </table>
     //Show Dashboard if Logged In
     <div class="container-fluid">
         <div class="col-md-8">
