--- a/Website/USSEScoreboard/Views/Shared/_LoginPartial.cshtml
+++ b/Website/USSEScoreboard/Views/Shared/_LoginPartial.cshtml
@@ -11,11 +11,11 @@
     <form asp-area="" asp-controller="Account" asp-action="LogOff" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
             <li>
-                <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Hello @User.Identity.Name !</a>
+                <a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Hello @User.Identity.Name!</a>
                
             </li>
             <li>
-                <button type="submit" class="btn btn-link navbar-btn navbar-link">Log off</button>
+                <a asp-area="" asp-controller="Account" asp-action="LogOff">Log Off</a>
             </li>
         </ul>
     </form>
