--- a/Website/USSEScoreboard/Views/Home/Index.cshtml
+++ b/Website/USSEScoreboard/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
 {
     //Show Dashboard if Logged In
     <div class="container-fluid">
-        <div class="col-md-8">
+        <div class="col-md-12">
             <!-- start panel -->
             <div class="panel panel-info">
                 <div class="panel-heading">
@@ -20,10 +20,10 @@
                     <thead>
                         <tr>
                             <th style="border-top: 1px solid #fff !important; border-left: 1px solid #fff !important;">&nbsp;</th>
-                            <th class="text-center">Weekly Tasks <a href="/Commitments/My"><i class="fa fa-external-link" aria-hidden="true"></i></a></th>
-                            <th class="text-center">CRM <a href="https://usdxevangelism.crm.dynamics.com/main.aspx" title="Launch CRM in new window" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a></th>
+                            @*<th class="text-center">Weekly Tasks <a href="/Commitments/My"><i class="fa fa-external-link" aria-hidden="true"></i></a></th>*@
+                            <th class="text-center">VSTS <a href="https://cseng.visualstudio.com/CSEng/_workitems/assignedtome/" title="Launch VSTS in new window" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a></th>
                             <th class="text-center">Expenses <a href="http://msexpense2" title="Launch Expenses in new window" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a></th>                            
-                            <th class="text-center">A+ <a href="http://aka.ms/ascendplus" title="Ascend+ Notes and Updates" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a></th>
+                            @*<th class="text-center">A+ <a href="http://aka.ms/ascendplus" title="Ascend+ Notes and Updates" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a></th>*@
                             <th class="text-center">FRI <a href="http://aka.ms/roleguide" title="Launch Role Guide in new window" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a></th>
                         </tr>
                     </thead>
@@ -32,25 +32,25 @@
                     @foreach (UserScore UserScore in Model.TeamTotals)
                     {
                         <tr>
-                            <td width="24%">@UserScore.FullName</td>
-                            <td width="19%" class="text-center">
+                            <td width="40%">@UserScore.FullName</td>
+                            @*<td width="19%" class="text-center">
                                 <a asp-controller="Commitments" asp-action="SearchByUser" asp-route-id="@UserScore.UserProfileId" class="btn @(UserScore.CommitCompleted == UserScore.CommitTotal && UserScore.CommitCompleted > 0 ? "btn-success" : "btn-primary") btn-xs">
                                     @UserScore.CommitCompleted
                                     of
                                     @UserScore.CommitTotal
                                 </a>
+                            </td>*@
+                            <td class="text-center" width="20%">                         
+                                <a asp-controller="Home" asp-action="ToggleCRMUser" asp-route-id="@UserScore.UserProfileId" title="Toggle CRM for @UserScore.FullName" class="btn @(UserScore.IsCRM ? "btn-success" : "btn-danger") btn-xs"><span class="glyphicon @(UserScore.IsCRM ? "glyphicon-ok-circle" : "glyphicon-warning-sign")" aria-hidden="true"></span></a>                         
                             </td>
-                            <td class="text-center" width="14%">                         
-                                <a asp-controller="Commitments" asp-action="ToggleCRMUser" asp-route-id="@UserScore.UserProfileId" title="Toggle CRM for @UserScore.FullName" class="btn @(UserScore.IsCRM ? "btn-success" : "btn-danger") btn-xs"><span class="glyphicon @(UserScore.IsCRM ? "glyphicon-ok-circle" : "glyphicon-warning-sign")" aria-hidden="true"></span></a>                         
-                            </td>
-                            <td class="text-center" width="14%">
-                                <a asp-controller="Commitments" asp-action="ToggleExpensesUser" asp-route-id="@UserScore.UserProfileId" title="Toggle Expenses for @UserScore.FullName" class="btn @(UserScore.IsExpenses ? "btn-success" : "btn-danger") btn-xs"><span class="glyphicon @(UserScore.IsExpenses ? "glyphicon-ok-circle" : "glyphicon-warning-sign")" aria-hidden="true"></span></a>
+                            <td class="text-center" width="20%">
+                                <a asp-controller="Home" asp-action="ToggleExpensesUser" asp-route-id="@UserScore.UserProfileId" title="Toggle Expenses for @UserScore.FullName" class="btn @(UserScore.IsExpenses ? "btn-success" : "btn-danger") btn-xs"><span class="glyphicon @(UserScore.IsExpenses ? "glyphicon-ok-circle" : "glyphicon-warning-sign")" aria-hidden="true"></span></a>
                             </td>  
-                            <td class="text-center" width="14%">
-                                <a asp-controller="Commitments" asp-action="ToggleAscendNotesUser" asp-route-id="@UserScore.UserProfileId" title="Toggle FRI for @UserScore.FullName" class="btn @(UserScore.IsAscendNotes ? "btn-success" : "btn-danger") btn-xs"><span class="glyphicon @(UserScore.IsAscendNotes ? "glyphicon-ok-circle" : "glyphicon-warning-sign")" aria-hidden="true"></span></a>
-                            </td>
-                            <td class="text-center" width="14%">
-                                <a asp-controller="Commitments" asp-action="ToggleFRIUser" asp-route-id="@UserScore.UserProfileId" title="Toggle FRI for @UserScore.FullName" class="btn @(UserScore.IsFRI ? "btn-success" : "btn-danger") btn-xs"><span class="glyphicon @(UserScore.IsFRI ? "glyphicon-ok-circle" : "glyphicon-warning-sign")" aria-hidden="true"></span></a>
+                            @*<td class="text-center" width="14%">
+                                <a asp-controller="Home" asp-action="ToggleAscendNotesUser" asp-route-id="@UserScore.UserProfileId" title="Toggle FRI for @UserScore.FullName" class="btn @(UserScore.IsAscendNotes ? "btn-success" : "btn-danger") btn-xs"><span class="glyphicon @(UserScore.IsAscendNotes ? "glyphicon-ok-circle" : "glyphicon-warning-sign")" aria-hidden="true"></span></a>
+                            </td>*@
+                            <td class="text-center" width="20%">
+                                <a asp-controller="Home" asp-action="ToggleFRIUser" asp-route-id="@UserScore.UserProfileId" title="Toggle FRI for @UserScore.FullName" class="btn @(UserScore.IsFRI ? "btn-success" : "btn-danger") btn-xs"><span class="glyphicon @(UserScore.IsFRI ? "glyphicon-ok-circle" : "glyphicon-warning-sign")" aria-hidden="true"></span></a>
                             </td>                                                                                  
                         </tr>
                     }
@@ -63,70 +63,6 @@
             </div>
             <!-- end panel -->
 
-        </div>
-        <div class="col-md-4">
-            <!-- start global score panel -->
-            <div class="panel panel-info">
-                <div class="panel-heading">
-                    <strong>Southeast Team Totals</strong>
-                </div>
-                @*<div class="panel-body">*@
-                    <table class="table table-striped">
-                        <tr>
-                            <td width="65%">Total Presentations:</td>
-                            <td><span class="badge">@Model.TotalPresentations</span></td>
-                        </tr>
-                        <tr>
-                            <td>Ascend Proposed:</td>
-                            <td><span class="badge">@Model.TotalAscendProposed</span></td>
-                        </tr>
-                        <tr>
-                            <td>Ascend Active:</td>
-                            <td><span class="badge">@Model.TotalAscendActive</span></td>
-                        </tr>
-                        <tr>
-                            <td>Ascend Code Complete:</td>
-                            <td><span class="badge">@Model.TotalAscendComplete</span></td>
-                        </tr>
-                        <tr>
-                            <td>Ascend Wins:</td>
-                            <td><span class="badge">@Model.TotalAscendWins</span></td>
-                        </tr>
-                    </table>
-                @*</div>*@
-            </div>
-            <!-- end global score panel-->       
-            <!-- start trending table -->
-            <div class="panel panel-info">
-                <div class="panel-heading">
-                   <strong>Lead Measure Trend To Date</strong>
-                </div>
-                <div class="panel-body">
-                    <label>Community Wins</label>
-                    <div class="progress">
-                        <div class="progress-bar progress-bar-striped @Model.CommunityProgressClass" role="progressbar" aria-valuenow="@Model.CommunityProgress" aria-valuemin="0" aria-valuemax="100" style="width: @Model.CommunityProgress%">
-                            Trending &#64; @Model.CommunityProgress%
-                        </div>
-                    </div>
-                    <div class="progress">
-                        <div class="progress-bar progress-bar-striped @Model.CommunityOverallClass" role="progressbar" aria-valuenow="@Model.CommunityOverall" aria-valuemin="0" aria-valuemax="100" style="width: @Model.CommunityOverall%">
-                            Overall &#64; @Model.CommunityOverall%
-                        </div>
-                    </div>
-                    <label>Ascend Wins</label>
-                    <div class="progress">
-                        <div class="progress-bar progress-bar-striped @Model.AscendProgressClass" role="progressbar" aria-valuenow="@Model.AscendProgress" aria-valuemin="0" aria-valuemax="100" style="width: @Model.AscendProgress%">
-                            Trending &#64; @Model.AscendProgress%
-                        </div>
-                    </div>
-                    <div class="progress">
-                        <div class="progress-bar progress-bar-striped @Model.AscendOverallClass" role="progressbar" aria-valuenow="@Model.AscendOverall" aria-valuemin="0" aria-valuemax="100" style="width: @Model.AscendOverall%">
-                            Overall &#64; @Model.AscendOverall%
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- start trending table -->     
         </div>
     </div>
 
