--- a/Website/USSEScoreboard/Views/Highlights/_Grid.cshtml
+++ b/Website/USSEScoreboard/Views/Highlights/_Grid.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<USSEScoreboard.Models.HighlightListItem>
+﻿@model USSEScoreboard.Models.HighlightViewModels.ListHighlightsViewModel
 
 <table class="table">
     <thead>
@@ -13,7 +13,7 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var item in Model)
+        @foreach (var item in Model.Highlights)
         {
             <tr>
                 <td>
