Namespace change to Scoreboard.Website

--- a/Solution/Scoreboard.Website/Views/Shared/_LoginPartial.cshtml
+++ b/Solution/Scoreboard.Website/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using USSEScoreboard.Models
-@using USSEScoreboard.Interfaces
+@using Scoreboard.Website.Models
+@using Scoreboard.Website.Interfaces
 
 @inject IUserProfileRepository UserProfileRepository
 
