--- a/Solution/Scoreboard.Website/Views/_ViewImports.cshtml
+++ b/Solution/Scoreboard.Website/Views/_ViewImports.cshtml
@@ -1,6 +1,6 @@
-﻿@using USSEScoreboard
-@using USSEScoreboard.Models
-@using USSEScoreboard.Models.AccountViewModels
-@using USSEScoreboard.Models.ManageViewModels
+﻿@using Scoreboard.Website
+@using Scoreboard.Website.Models
+@using Scoreboard.Website.Models.AccountViewModels
+@using Scoreboard.Website.Models.ManageViewModels
 @using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
