Namespace change continued

--- a/Solution/Scoreboard.Website/Views/Highlights/Search.cshtml
+++ b/Solution/Scoreboard.Website/Views/Highlights/Search.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<USSEScoreboard.Models.HighlightSearchResult>
+@model IEnumerable<Scoreboard.Website.Models.HighlightSearchResult>
 
 @{
     ViewData["Title"] = "Index";
