--- a/Solution/Scoreboard.Website/Views/Highlights/_header.cshtml
+++ b/Solution/Scoreboard.Website/Views/Highlights/_header.cshtml
@@ -1,4 +1,4 @@
-﻿@model USSEScoreboard.Models.HighlightViewModels.ListHighlightsViewModel
+﻿@model Scoreboard.Website.Models.HighlightViewModels.ListHighlightsViewModel
 
 <div>
     <div class="row">
