--- a/Solution/Scoreboard.Website/Views/Home/Index.cshtml
+++ b/Solution/Scoreboard.Website/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model USSEScoreboard.Models.HomeViewModels.DashboardViewModel
+﻿@model Scoreboard.Website.Models.HomeViewModels.DashboardViewModel
 
 @{
     ViewData["Title"] = "Home Page";
