--- a/Solution/Scoreboard.Website/Views/Shared/_Layout.cshtml
+++ b/Solution/Scoreboard.Website/Views/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@
             @RenderBody()
             <hr />
             <footer>
-                <p>&copy; @DateTime.Now.Year.ToString() - USSEScoreboard</p>
+                <p>&copy; @DateTime.Now.Year.ToString() - Scoreboard.Website</p>
             </footer>
         </div>
 
