--- a/Solution/Scoreboard.Website/Views/Highlights/Index.cshtml
+++ b/Solution/Scoreboard.Website/Views/Highlights/Index.cshtml
@@ -1,4 +1,4 @@
-@model USSEScoreboard.Models.HighlightViewModels.ListHighlightsViewModel
+@model Scoreboard.Website.Models.HighlightViewModels.ListHighlightsViewModel
 
 @{
     ViewData["Title"] = "Index";
